# icebug

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  version.py
.github/workflows/: build_wheels.yml  ci-matrix.yml  release-binaries.yml
docs/: ICEBUG_DESIGN.md
examples/: parallel_leiden_scoring_extension_demo.py
include/networkit/coarsening/: CoarsenedGraphView.hpp
include/networkit/community/: ParallelLeidenScoringExtension.hpp  ParallelLeidenView.hpp
include/networkit/graph/: Graph.hpp
include/networkit/scd/: ShellStruct.hpp
include/networkit/structures/: ConcurrentUnionFind.hpp  LeastCommonAncestor.hpp
networkit/: __init__.py  community.pyx  graph.pyx
networkit/cpp/coarsening/: CoarsenedGraphView.cpp
networkit/cpp/community/: CMakeLists.txt  ParallelLeiden.cpp  ParallelLeidenModularityScoringExtension.cpp  ParallelLeidenView.cpp
networkit/cpp/graph/: Graph.cpp
networkit/cpp/graph/test/: ParallelEdgeIterationGTest.cpp
networkit/cpp/scd/: ShellStruct.cpp
networkit/cpp/scd/test/: ShellStructGTest.cpp
networkit/cpp/structures/: CMakeLists.txt  ConcurrentUnionFind.cpp  LeastCommonAncestor.cpp
networkit/cpp/structures/test/: CMakeLists.txt  ConcurrentUnionFindGTest.cpp  LeastCommonAncestorGTest.cpp
networkit/test/: test_arrow_pagerank.py  test_icebug_mem_graph.py  test_leiden_validation.py
