[project]
name = "icebug"
version = "12.8"
description = "High performance graph analytics backed by read-only memory"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "License.txt"}
keywords =["graph algorithm", "network analysis", "social network", "apache arrow", "columnar"]
authors = [
  {name = "Christian L. Staudt"},
  {name = "Henning Meyerhenke"},
  {name = "Arun Sharma"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Environment :: Other Environment",
  "Framework :: IPython",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
  "scipy",
  "numpy",
  "pyarrow>=23.0.1,<24.0",
  "icebug-format>0.1.0"
]

[project.optional-dependencies]
test = ["pytest", "pandas", "networkx"]
vizbridges = ["ipycytoscape", "plotly", "seaborn", "anywidget", "tabulate"]
pytest = ["pytest", "pandas", "networkx", "ipycytoscape", "plotly", "seaborn", "anywidget", "tabulate"]

[project.urls]
homepage = "https://github.com/Ladybug-Memory/icebug"
documentation = "https://networkit.github.io/dev-docs/index.html"
repository = "https://github.com/Ladybug-Memory/icebug"
changelog = "https://github.com/Ladybug-Memory/icebug/blob/master/CHANGES.md"


[tool.pytest.ini_options]
testpaths = ["networkit/test"]
addopts = ["--ignore=extlibs"]

[build-system]
requires = [
  "cython<3.1.0",
  "numpy",
  "setuptools",
  "wheel"
]
